Fix: added the missing preposition

--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -62,7 +62,7 @@ while Section~\ref{sec:newlist} documents the details of physics list implementa
 %Secctio~\ref{sec:example} describes an example application utilizing the new physics list
 %for the use case of spallation reaction study.
 Physics performance is demonstrated in Section~\ref{sec:performance},
-and status of carbon projectiles is given Section~\ref{sec:carbon}. 
+and status of carbon projectiles is given in Section~\ref{sec:carbon}. 
 Section~\ref{sec:conclusion} concludes with outline of future developments.
 
 \section{Geant4 physics lists}\label{sec:list}
