Possible fix: Probably did not mean physics lists...

--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -71,7 +71,7 @@ A unique feature of Geant4 is to decouple physics models, cross sections, and pr
 using abstract interfaces, and manage the usage of different options with so-called the physics lists:
 \begin{itemize}
 \item Concept provides transparent access to various physics models.
-\item The Geant4 physics system can be easily extended with physics lists.
+\item The Geant4 physics system can be easily extended with new models and cross sections.
 \item Physics lists allow users to find a good balance between various goals 
 (e.g. CPU time requirements vs. accuracy of results).
 \end{itemize}
