Fix: Article not necessary

--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -76,7 +76,7 @@ using abstract interfaces, and manage the usage of different options with so-cal
 (e.g. CPU time requirements vs. accuracy of results).
 \end{itemize}
 
-Often an optional models are available with specific strengths and limitations, 
+Often optional models are available with specific strengths and limitations, 
 so physics lists concept is used to provide optimal set of functionality for specific use case.
 
 \section{INCL and ABLA models in Geant4} \label{sec:models}
