Fix: Physics list name

--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -134,7 +134,7 @@ neutron and pion inelastic interactions in the energy range 0~-~3~GeV.
 Above 3~GeV threshold Geant4 QGSP model is used, since this list is intended for
 spallation and ADS applications we have not optimized the physics
 performance for energies higher than 3 GeV. 
-Key features of {\tt QGSP\_BERT} physics list are summarised in Table~\ref{tab:list}.
+Key features of {\tt QGSP\_INCL\_ABLA} physics list are summarised in Table~\ref{tab:list}.
 
 \begin{center}
 \begin{table}[h]
