Updated the fragment production and neutron double-differential images
Fragment production: added axis labels

Neutron double-diff: better statistics and included angle 0 deg

--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -234,7 +234,7 @@ Validation & Configuration & Figure \\
 
 \begin{figure}[h]
 \begin{center}
-\includegraphics[scale=0.80]{poster/images/fragments.eps}
+\includegraphics[scale=0.80]{images/proton1000MeVPb.eps}
 
 \caption{\label{fig:fragpb}Mass distribution of fragments  for p(1.0~GeV) + $^{208}{\rm Pb}$ interaction 
 using the INCL and ABLA  models.
@@ -259,7 +259,7 @@ and new C++ implementation (red). Data is from Ref.\cite{gsifragments}.}
 
 \begin{figure}
 \begin{center}
-\includegraphics[scale=0.70]{poster/images/aluminum.eps}
+\includegraphics[scale=0.70]{images/proton1200MeVAl.eps}
 \caption{\label{fig:neutronAl}Double-differential for neutron production cross section
     from Geant4 INCL and ABLA models in p(1.2 GeV) + Al $\rightarrow$ n + X reaction.
 Histograms are the results from the original FORTRAN version (black) and new C++ implementation (red), respectively. 
@@ -273,7 +273,7 @@ Data is from Ref.~\cite{data}.} %PK::: is the data ref ok?
 
 \begin{figure}
 \begin{center}
-\includegraphics[scale=0.70]{poster/images/iron.eps}
+\includegraphics[scale=0.70]{images/proton800MeVFe.eps}
 \caption{\label{fig:neutron08Fe}Neutron production from p(0.8 GeV) + Fe  $\rightarrow$ n + X. 
 Data is from Ref.~\cite{data}.}
 \end{center}
