Added neutron double-diff plot for p(1.6 GeV) + Pb with good statistics

--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -226,6 +226,7 @@ Validation & Configuration & Figure \\
  & p(1.2 GeV) + Al $\rightarrow$ n + X & Fig.~\ref{fig:neutronAl} \\
  & p(0.8 GeV) + Fe $\rightarrow$ n + X & Fig.~\ref{fig:neutron08Fe} \\
  & p(1.6~GeV) + Fe $\rightarrow$ n + X & Fig.~\ref{fig:neutronFe} \\
+ & p(1.6~GeV) + Pb $\rightarrow$ n + X & Fig.~\ref{fig:neutronPb} \\
 \br
 \end{tabular}
 \label{tab:validation}
@@ -285,6 +286,17 @@ Data is from Ref.~\cite{data}.}
 \includegraphics[scale=0.70]{images/proton1600MeVFe.eps}
 \caption{\label{fig:neutronFe}Double-differential for neutron production cross section
     from Geant4 INCL and ABLA models in p(1.6~GeV) + Fe $\rightarrow$ n + X reaction.
+Data is from Ref.~\cite{data}.}
+
+\end{center}
+
+\end{figure}
+
+\begin{figure}
+\begin{center}
+\includegraphics[scale=0.70]{images/proton1600MeVPb.eps}
+\caption{\label{fig:neutronFe}Double-differential for neutron production cross section
+    from Geant4 INCL and ABLA models in p(1.6~GeV) + Pb $\rightarrow$ n + X reaction.
 Data is from Ref.~\cite{data}.}
 
 \end{center}
