Fix: simalation -> simulation

--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -37,7 +37,7 @@ This paper is focused on issues relevant to Geant4 \cite{geant4} simulation of n
 modelling of spallation reactions, and validating neutron production and fragmentation.
 
 % Material: http://users.ictp.it/~pub_off/lectures/lns012/Kadi_002.pdf
-Our motivation is to develop Geant4 simalation tools for European Isotope Separation On-Line
+Our motivation is to develop Geant4 simulation tools for European Isotope Separation On-Line
 Radioactive Ion Beam Facility (EURISOL project) \cite{eurisol} and 
 Accelerator Driven Systems (ADSs) \cite{ads}. 
 The goal of accelerator driven sub-critical reactor development is to provide safer and more effective
