Fix: improve of -> the improvement of

--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -326,7 +326,7 @@ dedicated  Fortran codes INCL4.2 and ABLA v3, providing detailed modelling
 of spallation, fission, and evaporation.
 
 
-Ongoing work is improve of the physics models for the treatment of light ion beams.
+Ongoing work is the improvement of the physics models for the treatment of light ion beams.
 In future releases the physics list {\tt QGSP\_\-INCL\_ABLA} will be further optimised. 
 For high energy applications the physics list need to be modified
 so that additional model is added between QGSP and INCL/ABLA to treat interactions in 3-9~GeV energy range.
