Fix: use - instead of $\sim$

--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -21,7 +21,7 @@ The C++ translation of original Fortran INCL intra-nuclear
 cascade and ABLA fission/de-excitation codes 
 are used in the physics list.
 The INCL model prepared is well established for targets heavier than Aluminium
-and projectile energies from $\sim$ 150 MeV up to 2.5 GeV $\sim$ 3 GeV.
+and projectile energies from 150 MeV up to 2.5 GeV - 3 GeV.
 %Validity of the Geant4 physics list is demonstrated from 
 %the perspective of accelerator driven systems and EURISOL project, %PK::: uncomment material added
 %especially with the neutron double differential cross sections and residual nuclei production.
