--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -100,7 +100,7 @@ Table~\ref{tab:inclabla} summarise the key features of these models.
 {\bf INCL4.2}& \\
 \mr
 
-Projectiles & INCL/ABLA for protons, neutrons, pions ($\pi^-$, $\pi^-$, $\pi^+$)\\
+Projectiles & INCL/ABLA for protons, neutrons, pions ($\pi^-$, $\pi^0$, $\pi^+$)\\
 & D, T, $^3{\rm He}$, $\alpha$\\
 Energy range & $\sim$150~MeV -- $\sim$3GeV \\
 Target nuclei & Carbon -- Uranium \\
