Fix: Simplify the Fortran to C++ translation sentence

--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -86,8 +86,8 @@ INCL4.2 \cite{incl} and ABLA v3 \cite{abla}.
 Recently these implementations have been translated into C++ and codes distributed
 as part of Geant4 toolkit \cite{pk08bProceedings}. 
 First beta release of INCL 4.2 and ABLA v3 was in Geant4  9.1 (December 2007)~\cite{g4site}.
-Currently new versions of INCL and ABLA versions in Geant4 are relatively straightforward
-and stable Fortran to C++ translations.
+Currently the INCL and ABLA versions in Geant4 are straightforward
+Fortran to C++ translations.
 Table~\ref{tab:inclabla} summarise the key features of these models.
 
 \begin{center}
